--- a/client/angular.json
+++ b/client/angular.json
@@ -30,7 +30,8 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles/main.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "watch": true
           },
           "configurations": {
             "production": {
